--- a/index.html
+++ b/index.html
@@ -1,195 +1,24 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Anis Ali Khan — Software Developer</title>
-  <meta name="description" content="Anis Ali Khan — Swift developer and cloud architect (AWS/Azure). Livestreams Swift app-building." />
-
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&family=IBMPlexMono:wght@300;400&display=swap" rel="stylesheet">
-
-  <link rel="stylesheet" href="/assets/css/style.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.8.0/styles/github.min.css">
-  <script type="application/ld+json">
-  {
-    "@context": "https://schema.org",
-    "@type": "Person",
-    "name":"Anis Ali Khan",
-    "url":"https://github.com/cloudleadanis",
-    "sameAs":["https://github.com/cloudleadanis","https://linkedin.com/in/khananis","https://x.com/TheCloudLead","https://www.twitch.tv/cloudleadanis"],
-    "jobTitle":"Software Developer, Cloud Architect"
-  }
-  </script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Portfolio</title>
+    <link rel="stylesheet" href="css/styles.css">
+    <script src="js/scripts.js"></script>
 </head>
 <body>
-  <header class="site-header" role="banner">
-    <div class="container header-inner">
-      <a class="brand" href="#hero">Anis Ali Khan</a>
-      <nav class="main-nav" role="navigation" aria-label="Main">
-        <a href="#about">About</a>
-        <a href="#skills">Skills</a>
-        <a href="#projects">Work</a>
-        <a href="#live">Live</a>
-        <a href="#contact">Contact</a>
-      </nav>
-      <div class="header-actions">
-        <a class="btn ghost" href="mailto:cloudleadanis@gmail.com">Hire me</a>
-      </div>
-    </div>
-  </header>
-
-  <main>
-    <section id="hero" class="hero" aria-label="Intro">
-      <div class="container hero-inner">
-        <div class="hero-copy">
-          <h1 class="hero-title">Swift apps and resilient cloud systems.</h1>
-          <p class="hero-sub">I build polished Apple‑platform apps and cloud architectures for fintech and financial services. I livestream practical Swift development and ship production‑grade systems on AWS and Azure.</p>
-
-          <div class="hero-ctas">
-            <a class="btn primary" href="mailto:cloudleadanis@gmail.com">Work with me</a>
-            <a class="btn link" href="#projects">Case studies</a>
-          </div>
-
-          <ul class="metrics" aria-hidden="true">
-            <li><strong>12</strong><span>Years</span></li>
-            <li><strong>3</strong><span>Apps shipped</span></li>
-            <li><strong>Streaming</strong><span>Swift tutorials</span></li>
-          </ul>
-
-          <p class="sr-only">Photo of Anis Ali Khan</p>
-        </div>
-
-        <div class="hero-visual">
-          <img src="/assets/images/portrait.svg" alt="Anis Ali Khan portrait" width="360" height="360" loading="lazy">
-        </div>
-      </div>
-    </section>
-
-    <section id="about" class="section about">
-      <div class="container">
-        <h2>About</h2>
-        <p>With 12 years in software development, I focus on building reliable, maintainable systems. I combine hands‑on Swift app development with cloud architecture on AWS and Azure to deliver production‑ready software for fintech and financial services.</p>
-      </div>
-    </section>
-
-    <section id="skills" class="section skills">
-      <div class="container">
-        <h2>Skills</h2>
-        <div class="skills-grid">
-          <div>
-            <h3>Swift & Apple platforms</h3>
-            <p>SwiftUI, UIKit, AppKit, Concurrency (async/await), SPM — focus on HIG‑compliant experiences and performance.</p>
-          </div>
-          <div>
-            <h3>Cloud & Backend</h3>
-            <p>AWS (primary) and Azure — serverless architectures, scalable APIs, CloudKit integration for Apple platforms.</p>
-          </div>
-          <div>
-            <h3>Architecture & Practices</h3>
-            <p>Clean Architecture, DDD, testing, CI/CD, observability and scalable system design for fintech requirements.</p>
-          </div>
-        </div>
-
-        <div class="code-sample">
-          <h4>Swift async example</h4>
-          <pre><code class="language-swift">import Foundation
-
-struct APIService {
-  func fetchJSON(from url: URL) async throws -> Data {
-    let (data, response) = try await URLSession.shared.data(from: url)
-    guard let r = response as? HTTPURLResponse, (200...299).contains(r.statusCode) else {
-      throw URLError(.badServerResponse)
-    }
-    return data
-  }
-}
-
-let svc = APIService()
-Task {
-  do {
-    let data = try await svc.fetchJSON(from: URL(string: "https://api.example.com/data.json")!)
-    print("data size: \(data.count)")
-  } catch {
-    print("error: \(error)")
-  }
-}
-</code></pre>
-        </div>
-      </div>
-    </section>
-
-    <section id="projects" class="section projects">
-      <div class="container">
-        <h2>Featured work</h2>
-        <div class="project-grid">
-
-          <article class="project-card" data-project="lanes">
-            <img src="/assets/images/lanes.svg" alt="Lanes app thumbnail" loading="lazy">
-            <div class="card-body">
-              <h3>Lanes</h3>
-              <p class="muted">HIG‑compliant Kanban board for macOS focused on keyboard-driven workflows.</p>
-            </div>
-            <button class="card-open" aria-expanded="false" aria-controls="modal-lanes">More</button>
-          </article>
-
-          <article class="project-card" data-project="fart">
-            <img src="/assets/images/fart.svg" alt="Fart Simulator Pro thumbnail" loading="lazy">
-            <div class="card-body">
-              <h3>Fart Simulator Pro</h3>
-              <p class="muted">A playful iOS app with lightweight UI and sound design.</p>
-            </div>
-            <button class="card-open" aria-expanded="false" aria-controls="modal-fart">More</button>
-          </article>
-
-          <article class="project-card" data-project="tonikaku">
-            <img src="/assets/images/tonikaku.svg" alt="Tonikaku Community thumbnail" loading="lazy">
-            <div class="card-body">
-              <h3>Tonikaku Community</h3>
-              <p class="muted">Community for Apple builders. CloudKit + AWS power syncing and backend services.</p>
-            </div>
-            <button class="card-open" aria-expanded="false" aria-controls="modal-tonikaku">More</button>
-          </article>
-
-        </div>
-      </div>
-    </section>
-
-    <!-- Modals (hidden by default) -->
-    <div id="modal" class="modal" aria-hidden="true">
-      <div class="modal-panel" role="dialog" aria-modal="true" aria-labelledby="modal-title">
-        <button class="modal-close" aria-label="Close">×</button>
-        <div id="modal-content"></div>
-      </div>
-    </div>
-
-    <section id="live" class="section live">
-      <div class="container">
-        <h2>Live</h2>
-        <p>I livestream Swift app development and tutorials. Join live on Twitch or watch recent streams.</p>
-        <div class="twitch-wrap">
-          <iframe src="https://player.twitch.tv/?channel=cloudleadanis&parent=github.io" height="480" width="100%" frameborder="0" scrolling="no" allowfullscreen></iframe>
-        </div>
-      </div>
-    </section>
-
-    <section id="contact" class="section contact">
-      <div class="container">
-        <h2>Contact</h2>
-        <p>If you'd like to work together, email me: <a href="mailto:cloudleadanis@gmail.com">cloudleadanis@gmail.com</a></p>
-      </div>
-    </section>
-
-  </main>
-
-  <footer class="site-footer">
-    <div class="container">
-      <small>© 2026 Anis Ali Khan</small>
-    </div>
-  </footer>
-
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.8.0/highlight.min.js"></script>
-  <script src="/assets/js/main.js"></script>
+    <header>
+        <h1>Welcome to My Portfolio</h1>
+    </header>
+    <main>
+        <section>
+            <img src="images/profile.jpg" alt="Profile Picture">
+            <p>This is my portfolio where I showcase my work.</p>
+        </section>
+    </main>
+    <footer>
+        <p>&copy; 2026 cloudleadanis. All rights reserved.</p>
+    </footer>
 </body>
 </html>
